--- a/jobapp/templates/jobapp/joblog_list.html
+++ b/jobapp/templates/jobapp/joblog_list.html
@@ -31,39 +31,46 @@
 
     <!-- Pagination -->
     <div class="mt-4">
-        <div class="pagination">
-            <ul class="pagination">
-                {% if page_obj.has_previous %}
-                    <li class="page-item">
-                        <a class="page-link" href="?page=1">First</a>
+        <form method="get" action="" class="form-inline">
+            <label class="mr-2"  for="paginate_by">Items per page : </label>
+            <select name="paginate_by" id="paginate_by" class="form-control mr-2" onchange="this.form.submit()">
+                <option value="5" {% if paginate_by == 5 %}selected{% endif %}>5</option>
+                <option value="10" {% if paginate_by == 10 %}selected{% endif %}>10</option>
+                <option value="20" {% if paginate_by == 20 %}selected{% endif %}>20</option>
+            </select>
+        </form>
+        <br>
+        <ul class="pagination">
+            {% if page_obj.has_previous %}
+                <li class="page-item">
+                    <a class="page-link" href="?page=1&paginate_by={{ paginate_by }}">First</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.previous_page_number }}&paginate_by={{ paginate_by }}">Previous</a>
+                </li>
+            {% endif %}
+
+            {% for num in page_obj.paginator.page_range %}
+                {% if num == page_obj.number %}
+                    <li class="page-item active" aria-current="page">
+                        <span class="page-link">{{ num }}</span>
                     </li>
+                {% else %}
                     <li class="page-item">
-                        <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+                        <a class="page-link" href="?page={{ num }}&paginate_by={{ paginate_by }}">{{ num }}</a>
                     </li>
                 {% endif %}
+            {% endfor %}
 
-                {% for num in page_obj.paginator.page_range %}
-                    {% if num == page_obj.number %}
-                        <li class="page-item active" aria-current="page">
-                            <span class="page-link">{{ num }}</span>
-                        </li>
-                    {% else %}
-                        <li class="page-item">
-                            <a class="page-link" href="?page={{ num }}">{{ num }}</a>
-                        </li>
-                    {% endif %}
-                {% endfor %}
-
-                {% if page_obj.has_next %}
-                    <li class="page-item">
-                        <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
-                    </li>
-                    <li class="page-item">
-                        <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
-                    </li>
-                {% endif %}
-            </ul>
-        </div>
+            {% if page_obj.has_next %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.next_page_number }}&paginate_by={{ paginate_by }}">Next</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}&paginate_by={{ paginate_by }}">Last</a>
+                </li>
+            {% endif %}
+        </ul>
         <span>Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</span>
     </div>
 
@@ -72,3 +79,4 @@
         <a class="btn btn-secondary" href="{% url 'jobs:job_list' %}">Back to Job List</a>
     </div>
 {% endblock %}
+
