--- a/jobapp/templates/base.html
+++ b/jobapp/templates/base.html
@@ -33,7 +33,7 @@
     <!-- Footer (if needed) -->
     <footer class="footer mt-auto py-3 bg-light">
         <div class="container">
-            <span class="text-muted">© 2024 MyApp. All rights reserved.</span>
+            <p class=" text-muted text-center">© 2024 MyApp. All rights reserved.</p>
         </div>
     </footer>
 
