--- a/jobapp/templates/jobapp/job_list.html
+++ b/jobapp/templates/jobapp/job_list.html
@@ -5,7 +5,17 @@
 
 {% block content %}
     <h1>Job List</h1>
-
+    <!-- Display messages -->
+    {% if messages %}
+    <div class="alert alert-info alert-dismissible fade show" role="alert">
+        {% for message in messages %}
+            {{ message }}<br>
+        {% endfor %}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    {% endif %}
     <!-- Search form -->
     <form method="get" action="">
         <div class="form-group row">
@@ -67,10 +77,7 @@
                     <td>{{ job.last_updated }}</td>
                     <td> 
                         {% if job.status != 'complete' %}
-                            <form method="post" action="{% url 'jobs:job_complete' job.job_id %}">
-                                {% csrf_token %}
-                                <button type="submit" class="btn btn-primary">Change to Done</button>
-                            </form>
+                            <a href="{% url 'jobs:confirm_job_complete' job.job_id %}" class="btn btn-primary">Change to Done</a>
                         {% else %}   
                             <button class="btn btn-light">Done</button>
                         {% endif %}
