--- a/jobapp/templates/base.html
+++ b/jobapp/templates/base.html
@@ -23,6 +23,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'jobs:job_list' %}">Job List</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'jobs:location_list' %}">Location List</a>
+                </li>
                 <!-- Add more nav items here if needed -->
             </ul>
         </div>
